Resolved bug where the component was too large on mobile

--- a/src/components/Summary/index.css
+++ b/src/components/Summary/index.css
@@ -26,6 +26,7 @@
 }
 
 .summary-component {
+  display: block;
   height: 100vh;
   width: 100vw;
   font-family: "HankenGrotesk";
